Work on new old and new combo theme

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 <style>
 body{
-  background: url('bacskground.jpg') center center;
+  background: url('background.jpg') center center;
   background-size: cover;
   font-family: 'Lato';
   padding: 10px;
